--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="my-3 text-start">
                     <label for="websiteName" class="form-label fw-semibold pb-1"><i class="fa-solid fa-book-bookmark pe-2"></i> Site Name</label>
                     <input oninput="ScanBookmarkNameNumberOfCharacters(this.value)" type="text" class="form-control" id="websiteName" placeholder="Bookmark Name">
-                    <p class="d-none text-danger" id="bookmarkNameRule">make sure the bookmark name is more than 3 characters and is not repeated</p>
+                    <p class="d-none text-danger" id="bookmarkNameRule">make sure the bookmark name is more than or equal 3 characters and is not repeated</p>
                   </div>
                   <div class="mb-4 text-start">
                     <label for="websiteURL" class="form-label fw-semibold pb-1"><i class="fa-solid fa-link pe-2"></i> Site URL</label>
